clang-ir/tests/snapshots/snapshot_fixtures__fixtures__gnu_asm_goto.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/gnu_asm_goto.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("%d %d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn gnu_asm_goto(%arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %28 = alloca s32i, "value", align 4
        %29 = alloca s32i, "__retval", align 4
        store %arg1, %28
        %30 = load %28 : s32i, align 4
        asm
        %31 = const 11 : s32i
        store %31, %29
        %32 = load %29 : s32i
        return %32
    ^bb1:
        label zero:
        %33 = const 13 : s32i
        store %33, %29
        %34 = load %29 : s32i
        return %34
}
fn gnu_asm_goto_output(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %14 = alloca s32i, "value", align 4
        %15 = alloca s32i, "__retval", align 4
        %16 = alloca s32i, "output", align 4
        store %arg0, %14
        %17 = load %14 : s32i, align 4
        store %17, %16, align 4
        %18 = load %16 : s32i, align 4
        asm
        store %19, %16, align 4
        %20 = load %16 : s32i, align 4
        %21 = const 1 : s32i
        %22 = add %20, %21 : s32i [nsw]
        store %22, %15
        %23 = load %15 : s32i
        return %23
    ^bb1:
        label zero:
        %24 = load %16 : s32i, align 4
        %25 = const 2 : s32i
        %26 = add %24, %25 : s32i [nsw]
        store %26, %15
        %27 = load %15 : s32i
        return %27
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[10]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const 0 : s32i
        %6 = call @gnu_asm_goto(%5) : s32i [all]
        %7 = const 5 : s32i
        %8 = call @gnu_asm_goto_output(%7) : s32i [all]
        %9 = const 0 : s32i
        %10 = call @gnu_asm_goto_output(%9) : s32i [all]
        %11 = call @printf(%4, %6, %8, %10) : s32i [all]
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
