clang-ir/tests/snapshots/snapshot_fixtures__fixtures__gnu_basic_asm.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/gnu_basic_asm.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]
global gnu_basic_asm_value : s32i = 0 [internal, default, align 4, dso_local]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn gnu_basic_asm_function() -> s32i [external, c];
fn gnu_function_basic_asm() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %10 = alloca s32i, "__retval", align 4
    asm(x86_att, out = [], in = [], in_out = [], "movl $$23, gnu_basic_asm_value(%rip)", "~{dirflag},~{fpsr},~{flags}" [side_effects]
    %11 = get_global @gnu_basic_asm_value : s32i*
    %12 = load %11 : s32i, align 4
    store %12, %10
    %13 = load %10 : s32i
    return %13
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[7]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @gnu_basic_asm_function() : s32i [all]
    %6 = call @gnu_function_basic_asm() : s32i [all]
    %7 = call @printf(%4, %5, %6) : s32i [all]
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
