clang-ir/tests/snapshots/snapshot_fixtures__fixtures__gnu_builtin_addressof.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/gnu_builtin_addressof.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn address_probe() -> s32i [internal, c, no_inline, dso_local, nothrow] {
        %9 = alloca s32i, "__retval", align 4
        %10 = alloca s32i, "value", align 4
        %11 = alloca s32i*, "address", align 8
        %12 = const 37 : s32i
        store %12, %10, align 4
        store %10, %11, align 8
        %13 = load %11 : s32i*, align 8
        cmp
        %15 = cast(bool_to_int) %14 : s32i
        %16 = load %11 : s32i*, align 8
        %17 = load %16 : s32i, align 4
        %18 = const 37 : s32i
        cmp
        %20 = cast(bool_to_int) %19 : s32i
        %21 = add %15, %20 : s32i [nsw]
        store %21, %9
        %22 = load %9 : s32i
        return %22
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = call @address_probe() : s32i [all]
        %6 = call @printf(%4, %5) : s32i [all]
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
