clang-ir/tests/snapshots/snapshot_fixtures__fixtures__gnu_builtin_source.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/gnu_builtin_source.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = "%s|%s|%d|%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[13] = "source_probe" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[68] = "tests/fixtures/gnu_builtin_source.c" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn source_probe() -> void [internal, c, no_inline, dso_local, nothrow] {
    %4 = get_global @printf : ((s8i*, ...) -> s32i)*
    %5 = get_global @.str : s8i[13]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = const @.str.1 : s8i*
    %8 = const @.str.2 : s8i*
    %9 = const 5 : u32i
    %10 = const 28 : u32i
    %11 = call @printf(%6, %7, %8, %9, %10) : s32i [all]
    return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    call @source_probe() [all]
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
