clang-ir/tests/snapshots/snapshot_fixtures__fixtures__gnu_builtins_numeric.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/gnu_builtins_numeric.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[15] = "%d %llu %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn gnu_builtin_bits() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %251 = alloca s32i, "__retval", align 4
    %252 = alloca s32i, "total", align 4
    %253 = const 0 : s32i
    store %253, %252, align 4
    %254 = const 5 : s32i
    %255 = load %252 : s32i, align 4
    %256 = add %255, %254 : s32i [nsw]
    store %256, %252, align 4
    %257 = const 6 : s32i
    %258 = load %252 : s32i, align 4
    %259 = add %258, %257 : s32i [nsw]
    store %259, %252, align 4
    %260 = const 7 : s32i
    %261 = load %252 : s32i, align 4
    %262 = add %261, %260 : s32i [nsw]
    store %262, %252, align 4
    %263 = const 31 : s32i
    %264 = const 4 : u64i
    %265 = const 8 : u64i
    %266 = mul %264, %265 : u64i
    %267 = const 1 : u64i
    %268 = sub %266, %267 : u64i
    %269 = cast(integral) %268 : s32i
    %270 = cmp eq %263, %269 : bool
    %271 = cast(bool_to_int) %270 : s32i
    %272 = load %252 : s32i, align 4
    %273 = add %272, %271 : s32i [nsw]
    store %273, %252, align 4
    %274 = const 63 : s32i
    %275 = const 8 : u64i
    %276 = const 8 : u64i
    %277 = mul %275, %276 : u64i
    %278 = const 1 : u64i
    %279 = sub %277, %278 : u64i
    %280 = cast(integral) %279 : s32i
    %281 = cmp eq %274, %280 : bool
    %282 = cast(bool_to_int) %281 : s32i
    %283 = load %252 : s32i, align 4
    %284 = add %283, %282 : s32i [nsw]
    store %284, %252, align 4
    %285 = const 63 : s32i
    %286 = const 8 : u64i
    %287 = const 8 : u64i
    %288 = mul %286, %287 : u64i
    %289 = const 1 : u64i
    %290 = sub %288, %289 : u64i
    %291 = cast(integral) %290 : s32i
    %292 = cmp eq %285, %291 : bool
    %293 = cast(bool_to_int) %292 : s32i
    %294 = load %252 : s32i, align 4
    %295 = add %294, %293 : s32i [nsw]
    store %295, %252, align 4
    %296 = const 4 : s32i
    %297 = load %252 : s32i, align 4
    %298 = add %297, %296 : s32i [nsw]
    store %298, %252, align 4
    %299 = const 5 : s32i
    %300 = load %252 : s32i, align 4
    %301 = add %300, %299 : s32i [nsw]
    store %301, %252, align 4
    %302 = const 6 : s32i
    %303 = load %252 : s32i, align 4
    %304 = add %303, %302 : s32i [nsw]
    store %304, %252, align 4
    %305 = const 31 : s32i
    %306 = load %252 : s32i, align 4
    %307 = add %306, %305 : s32i [nsw]
    store %307, %252, align 4
    %308 = const 62 : s32i
    %309 = load %252 : s32i, align 4
    %310 = add %309, %308 : s32i [nsw]
    store %310, %252, align 4
    %311 = const 61 : s32i
    %312 = load %252 : s32i, align 4
    %313 = add %312, %311 : s32i [nsw]
    store %313, %252, align 4
    %314 = const 4 : s32i
    %315 = load %252 : s32i, align 4
    %316 = add %315, %314 : s32i [nsw]
    store %316, %252, align 4
    %317 = const 8 : s32i
    %318 = load %252 : s32i, align 4
    %319 = add %318, %317 : s32i [nsw]
    store %319, %252, align 4
    %320 = const 8 : s32i
    %321 = load %252 : s32i, align 4
    %322 = add %321, %320 : s32i [nsw]
    store %322, %252, align 4
    %323 = const 1 : s32i
    %324 = load %252 : s32i, align 4
    %325 = add %324, %323 : s32i [nsw]
    store %325, %252, align 4
    %326 = const 0 : s32i
    %327 = load %252 : s32i, align 4
    %328 = add %327, %326 : s32i [nsw]
    store %328, %252, align 4
    %329 = const 1 : s32i
    %330 = load %252 : s32i, align 4
    %331 = add %330, %329 : s32i [nsw]
    store %331, %252, align 4
    %332 = load %252 : s32i, align 4
    store %332, %251
    %333 = load %251 : s32i
    return %333
}
fn gnu_builtin_reordering() -> u64i [internal, c, no_inline, dso_local, nothrow] {
    %213 = alloca u64i, "__retval", align 8
    %214 = alloca u64i, "total", align 8
    %215 = const 0 : u64i
    store %215, %214, align 8
    %216 = const 13330 : u64i
    %217 = load %214 : u64i, align 8
    %218 = add %217, %216 : u64i
    store %218, %214, align 8
    %219 = const 67305985 : u64i
    %220 = load %214 : u64i, align 8
    %221 = add %220, %219 : u64i
    store %221, %214, align 8
    %222 = const 578437695752307201 : u64i
    %223 = load %214 : u64i, align 8
    %224 = add %223, %222 : u64i
    store %224, %214, align 8
    %225 = const 72 : u64i
    %226 = load %214 : u64i, align 8
    %227 = add %226, %225 : u64i
    store %227, %214, align 8
    %228 = const 11336 : u64i
    %229 = load %214 : u64i, align 8
    %230 = add %229, %228 : u64i
    store %230, %214, align 8
    %231 = const 510274632 : u64i
    %232 = load %214 : u64i, align 8
    %233 = add %232, %231 : u64i
    store %233, %214, align 8
    %234 = const 17848844570815808640 : u64i
    %235 = load %214 : u64i, align 8
    %236 = add %235, %234 : u64i
    store %236, %214, align 8
    %237 = const 878082066 : u64i
    %238 = load %214 : u64i, align 8
    %239 = add %238, %237 : u64i
    store %239, %214, align 8
    %240 = const 2014458966 : u64i
    %241 = load %214 : u64i, align 8
    %242 = add %241, %240 : u64i
    store %242, %214, align 8
    %243 = const 77 : u64i
    %244 = load %214 : u64i, align 8
    %245 = add %244, %243 : u64i
    store %245, %214, align 8
    %246 = const 79 : u64i
    %247 = load %214 : u64i, align 8
    %248 = add %247, %246 : u64i
    store %248, %214, align 8
    %249 = load %214 : u64i, align 8
    store %249, %213
    %250 = load %213 : u64i
    return %250
}
fn gnu_builtin_overflow() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %121 = alloca s32i, "__retval", align 4
    %122 = alloca s32i, "signed_result", align 4
    %123 = alloca u32i, "unsigned_result", align 4
    %124 = alloca s64i, "long_result", align 8
    %125 = alloca s32i, "total", align 4
    %126 = const 0 : s32i
    store %126, %125, align 4
    %127 = const 20 : s32i
    %128 = const 22 : s32i
    %129#0, %129#1 = add.overflow %127, %128 : s32i
    store %129#0, %122, align 4
    %130 = not %129#1 : bool
    %131 = ternary %130 ? { : bool
        %210 = load %122 : s32i, align 4
        %211 = const 42 : s32i
        %212 = cmp eq %210, %211 : bool
        yield %212
    } : {
        %209 = const false : bool
        yield %209
    }
    %132 = cast(bool_to_int) %131 : s32i
    %133 = load %125 : s32i, align 4
    %134 = add %133, %132 : s32i [nsw]
    store %134, %125, align 4
    %135 = const 2147483647 : s32i
    %136 = const 1 : s32i
    %137#0, %137#1 = add.overflow %135, %136 : s32i
    store %137#0, %122, align 4
    %138 = cast(bool_to_int) %137#1 : s32i
    %139 = load %125 : s32i, align 4
    %140 = add %139, %138 : s32i [nsw]
    store %140, %125, align 4
    %141 = const 50 : u32i
    %142 = const 8 : u32i
    %143#0, %143#1 = sub.overflow %141, %142 : u32i
    store %143#0, %123, align 4
    %144 = not %143#1 : bool
    %145 = ternary %144 ? { : bool
        %206 = load %123 : u32i, align 4
        %207 = const 42 : u32i
        %208 = cmp eq %206, %207 : bool
        yield %208
    } : {
        %205 = const false : bool
        yield %205
    }
    %146 = cast(bool_to_int) %145 : s32i
    %147 = load %125 : s32i, align 4
    %148 = add %147, %146 : s32i [nsw]
    store %148, %125, align 4
    %149 = const 0 : u32i
    %150 = const 1 : u32i
    %151#0, %151#1 = sub.overflow %149, %150 : u32i
    store %151#0, %123, align 4
    %152 = cast(bool_to_int) %151#1 : s32i
    %153 = load %125 : s32i, align 4
    %154 = add %153, %152 : s32i [nsw]
    store %154, %125, align 4
    %155 = const 6 : s64i
    %156 = const 7 : s64i
    %157#0, %157#1 = mul.overflow %155, %156 : s64i
    store %157#0, %124, align 8
    %158 = not %157#1 : bool
    %159 = ternary %158 ? { : bool
        %202 = load %124 : s64i, align 8
        %203 = const 42 : s64i
        %204 = cmp eq %202, %203 : bool
        yield %204
    } : {
        %201 = const false : bool
        yield %201
    }
    %160 = cast(bool_to_int) %159 : s32i
    %161 = load %125 : s32i, align 4
    %162 = add %161, %160 : s32i [nsw]
    store %162, %125, align 4
    %163 = const 9223372036854775807 : s64i
    %164 = const 2 : s64i
    %165#0, %165#1 = mul.overflow %163, %164 : s64i
    store %165#0, %124, align 8
    %166 = cast(bool_to_int) %165#1 : s32i
    %167 = load %125 : s32i, align 4
    %168 = add %167, %166 : s32i [nsw]
    store %168, %125, align 4
    %169 = const 17 : s32i
    %170 = const 25 : s32i
    %171#0, %171#1 = add.overflow %169, %170 : s32i
    store %171#0, %122, align 4
    %172 = not %171#1 : bool
    %173 = ternary %172 ? { : bool
        %198 = load %122 : s32i, align 4
        %199 = const 42 : s32i
        %200 = cmp eq %198, %199 : bool
        yield %200
    } : {
        %197 = const false : bool
        yield %197
    }
    %174 = cast(bool_to_int) %173 : s32i
    %175 = load %125 : s32i, align 4
    %176 = add %175, %174 : s32i [nsw]
    store %176, %125, align 4
    %177 = const 19 : u32i
    %178 = const 23 : u32i
    %179#0, %179#1 = add.overflow %177, %178 : u32i
    store %179#0, %123, align 4
    %180 = not %179#1 : bool
    %181 = ternary %180 ? { : bool
        %194 = load %123 : u32i, align 4
        %195 = const 42 : u32i
        %196 = cmp eq %194, %195 : bool
        yield %196
    } : {
        %193 = const false : bool
        yield %193
    }
    %182 = cast(bool_to_int) %181 : s32i
    %183 = load %125 : s32i, align 4
    %184 = add %183, %182 : s32i [nsw]
    store %184, %125, align 4
    %185 = const 9223372036854775807 : s64i
    %186 = const 1 : s64i
    %187#0, %187#1 = add.overflow %185, %186 : s64i
    store %187#0, %124, align 8
    %188 = cast(bool_to_int) %187#1 : s32i
    %189 = load %125 : s32i, align 4
    %190 = add %189, %188 : s32i [nsw]
    store %190, %125, align 4
    %191 = load %125 : s32i, align 4
    store %191, %121
    %192 = load %121 : s32i
    return %192
}
fn gnu_builtin_floating() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %12 = alloca s32i, "__retval", align 4
    %13 = alloca complex<double>, "value", align 8
    %14 = alloca complex<double>, "conjugate", align 8
    %15 = alloca s32i, "total", align 4
    %16 = const (3.000000e+00, 4.000000e+00) : complex<double>
    store %16, %13, align 8
    %17 = load %13 : complex<double>, align 8
    %18 = complex.real %17 : double
    %19 = complex.imag %17 : double
    %20 = fneg %19 : double
    %21 = complex.create %18, %20 : complex<double>
    store %21, %14, align 8
    %22 = const 0 : s32i
    store %22, %15, align 4
    %23 = const 5 : s32i
    %24 = load %15 : s32i, align 4
    %25 = add %24, %23 : s32i [nsw]
    store %25, %15, align 4
    %26 = const 7 : s32i
    %27 = load %15 : s32i, align 4
    %28 = add %27, %26 : s32i [nsw]
    store %28, %15, align 4
    %29 = const 11 : s32i
    %30 = load %15 : s32i, align 4
    %31 = add %30, %29 : s32i [nsw]
    store %31, %15, align 4
    %32 = const 1.300000e+01 : double
    %33 = cast(float_to_int) %32 : s32i
    %34 = load %15 : s32i, align 4
    %35 = add %34, %33 : s32i [nsw]
    store %35, %15, align 4
    %36 = const 1.700000e+01 : float
    %37 = cast(float_to_int) %36 : s32i
    %38 = load %15 : s32i, align 4
    %39 = add %38, %37 : s32i [nsw]
    store %39, %15, align 4
    %40 = const 1.900000e+01 : long_double<f80>
    %41 = cast(float_to_int) %40 : s32i
    %42 = load %15 : s32i, align 4
    %43 = add %42, %41 : s32i [nsw]
    store %43, %15, align 4
    %44 = const 1 : s32i
    %45 = load %15 : s32i, align 4
    %46 = add %45, %44 : s32i [nsw]
    store %46, %15, align 4
    %47 = const 1 : s32i
    %48 = load %15 : s32i, align 4
    %49 = add %48, %47 : s32i [nsw]
    store %49, %15, align 4
    %50 = const 1 : s32i
    %51 = load %15 : s32i, align 4
    %52 = add %51, %50 : s32i [nsw]
    store %52, %15, align 4
    %53 = const 1 : s32i
    %54 = load %15 : s32i, align 4
    %55 = add %54, %53 : s32i [nsw]
    store %55, %15, align 4
    %56 = const 1 : s32i
    %57 = load %15 : s32i, align 4
    %58 = add %57, %56 : s32i [nsw]
    store %58, %15, align 4
    %59 = const 1 : s32i
    %60 = load %15 : s32i, align 4
    %61 = add %60, %59 : s32i [nsw]
    store %61, %15, align 4
    %62 = const 1 : s32i
    %63 = load %15 : s32i, align 4
    %64 = add %63, %62 : s32i [nsw]
    store %64, %15, align 4
    %65 = const 1 : s32i
    %66 = load %15 : s32i, align 4
    %67 = add %66, %65 : s32i [nsw]
    store %67, %15, align 4
    %68 = const 1 : s32i
    %69 = load %15 : s32i, align 4
    %70 = add %69, %68 : s32i [nsw]
    store %70, %15, align 4
    %71 = const 2 : s32i
    %72 = const 2 : s32i
    %73 = cmp eq %71, %72 : bool
    %74 = cast(bool_to_int) %73 : s32i
    %75 = load %15 : s32i, align 4
    %76 = add %75, %74 : s32i [nsw]
    store %76, %15, align 4
    %77 = const 1 : s32i
    %78 = load %15 : s32i, align 4
    %79 = add %78, %77 : s32i [nsw]
    store %79, %15, align 4
    %80 = const 1 : s32i
    %81 = load %15 : s32i, align 4
    %82 = add %81, %80 : s32i [nsw]
    store %82, %15, align 4
    %83 = const 1 : s32i
    %84 = load %15 : s32i, align 4
    %85 = add %84, %83 : s32i [nsw]
    store %85, %15, align 4
    %86 = const 1 : s32i
    %87 = load %15 : s32i, align 4
    %88 = add %87, %86 : s32i [nsw]
    store %88, %15, align 4
    %89 = const 1 : s32i
    %90 = load %15 : s32i, align 4
    %91 = add %90, %89 : s32i [nsw]
    store %91, %15, align 4
    %92 = const 0 : s32i
    %93 = cast(int_to_bool) %92 : bool
    %94 = not %93 : bool
    %95 = cast(bool_to_int) %94 : s32i
    %96 = load %15 : s32i, align 4
    %97 = add %96, %95 : s32i [nsw]
    store %97, %15, align 4
    %98 = load %13 : complex<double>, align 8
    %99 = complex.real %98 : double
    %100 = cast(float_to_int) %99 : s32i
    %101 = load %15 : s32i, align 4
    %102 = add %101, %100 : s32i [nsw]
    store %102, %15, align 4
    %103 = load %13 : complex<double>, align 8
    %104 = complex.imag %103 : double
    %105 = cast(float_to_int) %104 : s32i
    %106 = load %15 : s32i, align 4
    %107 = add %106, %105 : s32i [nsw]
    store %107, %15, align 4
    %108 = load %14 : complex<double>, align 8
    %109 = complex.real %108 : double
    %110 = cast(float_to_int) %109 : s32i
    %111 = load %15 : s32i, align 4
    %112 = add %111, %110 : s32i [nsw]
    store %112, %15, align 4
    %113 = load %14 : complex<double>, align 8
    %114 = complex.imag %113 : double
    %115 = fneg %114 : double
    %116 = cast(float_to_int) %115 : s32i
    %117 = load %15 : s32i, align 4
    %118 = add %117, %116 : s32i [nsw]
    store %118, %15, align 4
    %119 = load %15 : s32i, align 4
    store %119, %12
    %120 = load %12 : s32i
    return %120
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[15]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @gnu_builtin_bits() : s32i [all]
    %6 = call @gnu_builtin_reordering() : u64i [all]
    %7 = call @gnu_builtin_overflow() : s32i [all]
    %8 = call @gnu_builtin_floating() : s32i [all]
    %9 = call @printf(%4, %5, %6, %7, %8) : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
