clang-ir/tests/snapshots/snapshot_fixtures__fixtures__gnu_counter.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/gnu_counter.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = ConstArray { ty: Array { element_type: Named("s8i"), size: 13 }, elts: Str("%d %d %d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global direct_zero : s32i = CirInt { ty: Named("s32i"), value: "0" } [internal, default, align 4, dso_local]
global macro_one : s32i = CirInt { ty: Named("s32i"), value: "1" } [internal, default, align 4, dso_local]
global pair : s32i = CirInt { ty: Named("s32i"), value: "23" } [internal, default, align 4, dso_local]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "local_four", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 4 : s32i
        store %3, %1, align 4
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[13]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = get_global @direct_zero : s32i*
        %8 = load %7 : s32i, align 4
        %9 = get_global @macro_one : s32i*
        %10 = load %9 : s32i, align 4
        %11 = get_global @pair : s32i*
        %12 = load %11 : s32i, align 4
        %13 = load %1 : s32i, align 4
        %14 = call @printf(%6, %8, %10, %12, %13) : s32i [all]
        %15 = const 0 : s32i
        store %15, %0
        %16 = load %0 : s32i
        return %16
}
